Add Gemini provider support and update documentation
- Add new Gemini provider implementation with authentication and chat functionality
- Update Java version from 17 to 21 in Maven configuration
- Modernize code with Java 21 features (getLast(), isEmpty(), etc.)
- Add comprehensive build instructions with Java 21 requirements
- Update documentation to include Gemini in provider list and API docs
- Update Python example to support Gemini provider selection
- Add Linux-specific notes about xdotool dependency
- Include unit tests for new Gemini provider functionality